$[@bold;-#00FF00;S25]# Changelog v134 1.2 (2023.06.18)$[||]
Correct release for 1.1.4
* Fixed untranslated text in MathGameItem editor
* Optimized the CheckBox Item checked click.
* Fix #39: When returning to the LongTextItem editor, the text of the item was replaced by a long text
* Convert formatting text to plain in notifications
* New settings
and more optimize fixes...


$[@bold;-#00FF00;S25]# Changelog v130 1.1.4 (2023.06.17)$[||]
$[-#777777]# News$[||]
$[-#40eb34]* New item: MathGame
$[-#32bf28]    This is a random math exercise generator with a keyboard for entering the answer$[||]

* New formatting system: size. \$[S20] - size=20
* New fragment: ItemTextEditor. Replaced the text editing dialog.

* Changelog now use formatting: $[-#ffff00;=#ff00ff;@bold]Hello!$[||]
* Changelog now is Fragment instead of Activity

* CrashReportActivity added "Send to developer" button if send anonymous statistic disabled

* Settings resorted & enchanted

$[-#777777]# Fixes$[||]
* ColorHistoryManager uses less RAM
* Improved Update Checker
* The name of the initial tab is now translated into the user's language
$[@bold]* Resuming sending notifications after restarting the device$[||]
* Import: now importing from a higher version is not possible
* Crash-notification fixed
* Fix translates
* Fix shadow-link while transform any ContainerItem to FilterGroupItem
* The length of the PIN code is now limited to 10 characters
* The tab name length is now limited to 35 characters
* Formatting now show $ if it is not in the system (\$[])
* Fixed potential crashes in itemEditor
* Fix double-notify bug when first notify sent in app background
* Fixes internal errors when item with notifications deleted

$[-#777777]# Other$[||]
* Transform dialog now show only allowed items
* SetupActivity now contains theme selector
* QuickNote long press to send button now open settings.quickNoteType dialog
* When the CheckBox is clicked, tick is called instantly (for FilterGroup updates)